# Lottery-Lab

./: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: package-installers.yml
scripts/: android-env.mjs  gen-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backtest.rs  commands.rs  db.rs  errors.rs  lib.rs  llm.rs  main.rs  prompts.rs  recommendation.rs  reviews.rs  scheduler.rs  schema.rs  settings.rs  state.rs  sync.rs  time_utils.rs  worldcup.rs
src-tauri/src/sources/: dlt_official.rs  mod.rs  ssq_official.rs  text_backup.rs
src/components/: RecommendationPanel.tsx  SyncStatusCard.tsx
src/components/layout/: Sidebar.tsx
src/domain/: backtesting.ts  lotteryRules.ts  parsing.ts  recommendation.ts  scoring.ts  ticketMath.ts
src/domain/__tests__/: backtesting.test.ts  lotteryRules.test.ts  parsing.test.ts  recommendation.test.ts  scoring.test.ts  ticketMath.test.ts
src/lib/: db.ts  ipc.ts  labels.ts
src/pages/: BacktestsPage.tsx  DashboardPage.tsx  HistoryPage.tsx  PromptsPage.tsx  SettingsPage.tsx  WorldCupPage.tsx  _PagePlaceholder.tsx
